<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HealthPulse</string>
    <string name="add_record">Add Record</string>
    <string name="value">Value</string>
    <string name="save">Save</string>
    <string name="channel_name">Health Data Notifications</string>
    <string name="channel_description">Notifications for health data recording</string>
    <string name="enter_data">Enter Data</string>
    <string name="icon">Icon</string>
    <string name="data_type">Data Type</string>
    <string name="data_value">Data Value</string>
    <string name="datetime">Datetime</string>
    <string name="delete"> Delete </string>
    <string name="edit"> Edit </string>
    <string name="edit_health_record"> Edit Health Record </string>
    <string name="time">Time</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="systolicview">Systolic:</string>
    <string name="diastolicview">Diastolic:</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="remind_me">Remind Me</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="profile_management">Profile Management</string>
    <string name="create_new_profile">Create New Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="accept_terms">I Accept Terms</string>
    <string name="female">Female</string>
    <string name="add_health_record">Add Health Record</string>
    <string name="view_health_records">View Health Records</string>
    <string name="health_records">Health Records</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="view_profile">View Profile</string>
    <string name="add_new_user">Add New User</string>
    <string name="profile_name">Profile Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="medical_history">Medical History</string>
    <string name="gender">Gender</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="gender_label">Gender: %1$s</string>
    <string name="dob_label">Date of Birth: %1$s</string>
    <string name="logged_out">Logged out</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="gender_content_description">Select your gender</string>
    <string name="year_content_description">Select your birth year</string>
    <string name="month_content_description">Select your birth month</string>
    <string name="day_content_description">Select your birth day</string>
    <string name="date">Date</string>
    <string name="date_time">Date and Time</string>
    <string name="blood_sugarr">Blood Sugar</string>
    <string name="bswithmeasure">Blood Sugar (mg/dl)</string>
    <string name="bpwithmeasure">Blood Pressure (mmHg)</string>
    <string name="no_records">No records found</string>
    <string name="systolic_input">Enter systolic BP</string>
    <string name="diastolic_input">Enter diastolic BP</string>
    <string name="blood_sugar_input">Enter blood sugar level</string>
    <string name="date_input">Select date</string>
    <string name="time_input">Select time</string>
    <string name="save_button">Save health record</string>

    <string name="systolic_label">Systolic: %1$d</string>
    <string name="diastolic_label">Diastolic: %1$d</string>
    <string name="bs_label">Level: %1$d</string>





    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>




















</resources>
